<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	android:layout_margin="5dip"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="match_parent" 
	android:layout_height="match_parent">
	<TextView 
		android:layout_height="wrap_content"
		android:textStyle="bold" 
		android:textSize="20dp" 
		android:text="@string/editor_url"
		android:layout_width="wrap_content" 
		android:layout_gravity="center_vertical"
		android:layout_marginRight="5dip" />
	<EditText 
		android:id="@+id/edtURL" 
		android:text="@string/empty"
		android:layout_height="wrap_content" 
		android:layout_marginRight="5dip"
		android:layout_width="match_parent" 
		android:inputType="textUri" 
		android:ellipsize="middle"/>
	<TextView 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:textStyle="bold"
		android:textSize="20dp" 
		android:text="@string/editor_save_as"
		android:layout_marginRight="5dip" />
	<EditText 
		android:layout_height="wrap_content" 
		android:text="@string/empty"
		android:id="@+id/edtLocation" 
		android:layout_marginRight="5dip"
		android:layout_width="match_parent" />
	<RelativeLayout 
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<TextView 
			android:layout_width="wrap_content"
			android:textStyle="bold"
			android:layout_height="wrap_content"
			android:layout_marginRight="5dip"
			android:text="@string/editor_threads"
			android:textSize="20dp"
			android:layout_alignParentLeft="true"/>
		<TextView 
			android:layout_width="wrap_content"
			android:textStyle="bold" 
			android:layout_height="wrap_content"
			android:layout_marginRight="5dip" 
			android:text="8" 
			android:textSize="20dp"
			android:id="@+id/txtThreads" 
			android:layout_alignParentRight="true"/>
	</RelativeLayout>
	<SeekBar 
		android:layout_height="wrap_content" 
		android:progress="7"
		android:max="31" 
		android:id="@+id/sbThreads" 
		android:layout_width="match_parent"/>
	<RelativeLayout 
		android:layout_width="match_parent"
		android:gravity="center_horizontal" 
		android:layout_height="match_parent">
		<Button 
			android:text="@string/editor_start" 
			android:id="@+id/btnDownload"
			android:layout_height="wrap_content" 
			android:layout_gravity="center"
			android:layout_centerVertical="true" 
			android:layout_width="wrap_content"
			android:textSize="20dip" 
			android:textStyle="bold"/>
	</RelativeLayout>
</LinearLayout>
